--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@
         // --- 1. DATA STORAGE: GTD (Guaranteed) WALLET LIST ---
         const GTD_WALLETS_ARRAY = [
             "0xdeadbeefdeadbeefdeadbeefdeadbeefdeadbeef", 
-            "0x111122223333444455556666777788889999aaaa", 
+            "0xdE654f40b535fe70789223a8afE8f3555Db8A14d", 
         ];
 
         // --- 2. DATA STORAGE: FCFS (First-Come, First-Served) WALLET LIST ---
         const FCFS_WALLETS_ARRAY = [
             "0xbbbbccccddddeeeeffff00001111222233334444",
-            "0x111122223333444455556666777788889999aaaa",
+            "0xdE654f40b535fe70789223a8afE8f3555Db8A14d",
         ];
 
         const cleanAndCreateSet = (arr) => new Set(
@@ -304,7 +304,7 @@
             resultContainer.classList.remove('bg-green-100', 'border', 'border-green-400', 'shadow-lg', 'bg-red-100', 'border', 'border-red-400', 'bg-yellow-100', 'border', 'border-yellow-400');
             resultContainer.classList.add('flex-col'); 
             resultMessage.className = "text-base sm:text-2xl font-bold text-dark-brown/50";
-            resultMessage.textContent = "Submit your wallet below.";
+            resultMessage.textContent = "Submit your wallet.";
             secondaryMessage.textContent = "Few random wallets will be added to GTD or FCFS soon!";
             secondaryMessage.classList.remove('hidden');
 
