--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
         <!-- Image Placeholder below the checker --><div class="mt-8 mb-8 w-full flex justify-center">
-            <img id="mainArt" src="checker_assets/main_img.PNG" alt="Decorative Art" 
+            <img id="mainArt" src="checker_assets/main_img1.PNG" alt="Decorative Art" 
                  class="max-w-[80vw] sm:max-w-xs md:max-w-sm lg:max-w-md h-auto block">
         </div>
 
