--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
 
         <!-- Image Placeholder below the checker --><div class="mt-8 mb-8 w-full flex justify-center">
-            <img id="mainArt" src="checker_assets/main_img1.PNG" alt="Decorative Art" 
+            <img id="mainArt" src="checker_assets/main_img1.png" alt="Decorative Art" 
                  class="max-w-[80vw] sm:max-w-xs md:max-w-sm lg:max-w-md h-auto block">
         </div>
 
@@ -104,7 +104,7 @@
     <script>
         // --- UI ELEMENTS AND CONSTANTS ---
         const LOGO_PLACEHOLDER = "checker_assets/logo.PNG";
-        const CHECKER_ART_PLACEHOLDER = "checker_assets/main_img1.PNG"; 
+        const CHECKER_ART_PLACEHOLDER = "checker_assets/main_img1.png"; 
 
         // --- 1. DATA STORAGE: ELIGIBILITY TIERS (Highest Tier First) ---
         
